# graphql-permission-mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yml  mock_server.py  schema.json
src/gql_permission_mapper/: __init__.py  cli.py  config.py  generator.py  models.py  report.py  runner.py  schema.py
tests/: test_report.py  test_runner.py  test_schema.py
